--- a/app/index.html
+++ b/app/index.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Welcome</title>
-  </head>
-  <body>
-    <h2>Welcome</h2>
-  </body>
+    <head>
+        <meta charset="utf-8">
+    		<meta name="viewport" content="width=device-width, initial-scale=1" />
+    		<link rel="stylesheet" href="assets/css/main.css" />
+        <title>Blogger</title>
+    </head>
+    <body>
+        <div id="app">
+            <app-component></app-component>
+        </div>
+
+        <script src="/build/bundle.js"></script>
+        <script src="assets/js/jquery.min.js"></script>
+  			<script src="assets/js/skel.min.js"></script>
+  			<script src="assets/js/util.js"></script>
+  			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+  			<script src="assets/js/main.js"></script>
+    </body>
 </html>
